adicionando lista de blocked trackers assim como a sua quantidade

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -34,5 +34,6 @@
 
   <script src="../content-scripts/tracker-script.js"></script>
   <script src="../background.js"></script>
+  <script src="../popup/popup.js"></script>
 
 </html>
